<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="300dp"
        android:id="@+id/huarongdao"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/huarongdao2"/>

    <Button
        android:id="@+id/start_button"
        android:layout_below="@id/huarongdao"
        android:onClick="startGame"
        android:text="@string/start_game_button_text"
        style="@style/image_button_start" />


    <Button
        android:id="@+id/check_button"
        style="@style/image_button_start"
        android:text="@string/to_check_points_button_text"
        android:onClick="toCheckPoints"
        android:layout_below="@id/start_button"
        />

    <Button
        android:id="@+id/info_button"
        style="@style/image_button_start"
        android:text="@string/help_button_text"
        android:layout_below="@id/check_button"
        android:onClick="toHelpInfo"
        />

</RelativeLayout>